get piece placement and board state working

--- a/pages/tictactoe/style.css
+++ b/pages/tictactoe/style.css
@@ -2,6 +2,8 @@ html, body {
     margin: 0;
     touch-action: none;
     overflow: hidden;
+    font-family: monospace, monospace;
+    touch-action: none;
 }
 
 .p5Canvas {
